module/postponed/type_constructor/tests/inc/dynamic/types/single_too_many_params.rs
use type_constructor as the_module;
use the_module::prelude::*;

types!
{
  single Single : < T1, T2 >;
}

fn main()
{
}
